chore(configure) Set site name

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 6d4429ba-6739-4dc0-992f-6f8c961f58a9
-name: 'Pledge viewers'
+name: 'Drupal 8 Skeleton'
 mail: email@example.com
 slogan: ''
 page:
