--- a/config/sync/block.block.bartik_local_actions.yml
+++ b/config/sync/block.block.bartik_local_actions.yml
@@ -1,15 +1,15 @@
-uuid: 2d005f97-5c7d-4aa8-ac12-72bf795fc79b
+uuid: 950d01b6-191c-491b-91a3-611e6632b703
 langcode: en
 status: true
 dependencies:
   theme:
     - bartik
 _core:
-  default_config_hash: PffmQ-ABSz5tFjWmVsR7NesunDnEivvopnJnBjl8KNE
+  default_config_hash: 13GQpeITIJsp1kyPniXtWZfyFH87vb1xxJCHifL4UeE
 id: bartik_local_actions
 theme: bartik
-region: sidebar_first
-weight: -3
+region: content
+weight: -20
 provider: null
 plugin: local_actions_block
 settings:
