--- a/config/sync/block.block.seven_page_title.yml
+++ b/config/sync/block.block.seven_page_title.yml
@@ -1,14 +1,14 @@
-uuid: f6a00f40-0be8-4b10-b853-aa8d1e621362
+uuid: cd077dad-f439-46b4-9c14-45145c976b37
 langcode: en
 status: true
 dependencies:
   theme:
     - seven
 _core:
-  default_config_hash: 8yptDf6WrXxeyevUz4nP5vfr7BtxQqCBMninhV2IJ1g
+  default_config_hash: ZSpc3IoSaLd0PkB02nxjVPBMztIdsTdHek9SiGaqZ_c
 id: seven_page_title
 theme: seven
-region: content
+region: header
 weight: -30
 provider: null
 plugin: page_title_block
